# pyr

./: Cargo.toml  README.md  pyproject.toml  test_impl.py
.github/workflows/: CI.yml
pyr/: __init__.py  pyr.pyi
src/: client.rs  common.rs  error.rs  lib.rs  response.rs  types.rs
